# ledger_app

./: README.md  check_audit.py  check_tables.py  pyproject.toml  requirements.txt  seed.py
alembic/: env.py
alembic/versions/: 4255db478fb4_initial_tables_accounts_transactions_.py  da5c3b48d07a_create_audit_trigger_for_accounts.py
app/: main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  database.py
app/models/: __init__.py  account.py  audit_log.py  transaction.py
app/repositories/: ledger_repo.py
app/schemas/: transaction.py
app/services/: transfer_service.py
docs/: fluxograma-ledger-api.md
