[project]
name = "ledger-app"
version = "0.1.0"
description = "API REST de 'mini-contabilidade'"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioodbc>=0.5.0",
    "alembic>=1.17.2",
    "fastapi>=0.122.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "scalar-fastapi>=1.4.4",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
